Latest updates to figures and documentation.

--- a/01-preprocessing-stats.ipynb
+++ b/01-preprocessing-stats.ipynb
@@ -6,11 +6,11 @@
    "id": "13c6e761-fab0-4f6b-a5fe-cfda3d03957d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:36:03.523368Z",
-     "iopub.status.busy": "2021-11-10T10:36:03.523131Z",
-     "iopub.status.idle": "2021-11-10T10:36:04.597429Z",
-     "shell.execute_reply": "2021-11-10T10:36:04.596545Z",
-     "shell.execute_reply.started": "2021-11-10T10:36:03.523301Z"
+     "iopub.execute_input": "2021-11-25T10:06:11.882021Z",
+     "iopub.status.busy": "2021-11-25T10:06:11.881778Z",
+     "iopub.status.idle": "2021-11-25T10:06:13.078183Z",
+     "shell.execute_reply": "2021-11-25T10:06:13.077527Z",
+     "shell.execute_reply.started": "2021-11-25T10:06:11.881956Z"
     },
     "tags": []
    },
@@ -46,9 +46,6 @@
     "import typer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "root = os.path.dirname(os.getcwd())\n",
-    "os.chdir(root)\n",
-    "\n",
     "import src"
    ]
   },
@@ -66,11 +63,11 @@
    "id": "3afdc87d-0cbd-42d9-a770-18a3e214c6af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:36:04.598648Z",
-     "iopub.status.busy": "2021-11-10T10:36:04.598502Z",
-     "iopub.status.idle": "2021-11-10T10:37:52.779780Z",
-     "shell.execute_reply": "2021-11-10T10:37:52.778611Z",
-     "shell.execute_reply.started": "2021-11-10T10:36:04.598628Z"
+     "iopub.execute_input": "2021-11-25T10:06:13.079332Z",
+     "iopub.status.busy": "2021-11-25T10:06:13.079141Z",
+     "iopub.status.idle": "2021-11-25T10:08:26.357065Z",
+     "shell.execute_reply": "2021-11-25T10:08:26.355940Z",
+     "shell.execute_reply.started": "2021-11-25T10:06:13.079313Z"
     },
     "tags": []
    },
@@ -140,11 +137,11 @@
    "id": "71ee0b6a-0286-4840-a17d-cdd76161c1cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:52.817961Z",
-     "iopub.status.busy": "2021-11-10T10:37:52.817544Z",
-     "iopub.status.idle": "2021-11-10T10:37:52.850128Z",
-     "shell.execute_reply": "2021-11-10T10:37:52.849337Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:52.817924Z"
+     "iopub.execute_input": "2021-11-25T10:08:26.360619Z",
+     "iopub.status.busy": "2021-11-25T10:08:26.360172Z",
+     "iopub.status.idle": "2021-11-25T10:08:26.399937Z",
+     "shell.execute_reply": "2021-11-25T10:08:26.399409Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:26.360588Z"
     }
    },
    "outputs": [
@@ -171,11 +168,11 @@
    "id": "efca8023-498f-473f-b01c-16f0fada6dfd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:52.851397Z",
-     "iopub.status.busy": "2021-11-10T10:37:52.851260Z",
-     "iopub.status.idle": "2021-11-10T10:37:53.655302Z",
-     "shell.execute_reply": "2021-11-10T10:37:53.654507Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:52.851379Z"
+     "iopub.execute_input": "2021-11-25T10:08:26.401098Z",
+     "iopub.status.busy": "2021-11-25T10:08:26.400775Z",
+     "iopub.status.idle": "2021-11-25T10:08:27.357737Z",
+     "shell.execute_reply": "2021-11-25T10:08:27.357094Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:26.401077Z"
     },
     "tags": []
    },
@@ -211,11 +208,11 @@
    "id": "fdce0905-e088-4182-affc-906f06b5aba5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:53.656483Z",
-     "iopub.status.busy": "2021-11-10T10:37:53.656350Z",
-     "iopub.status.idle": "2021-11-10T10:37:53.760861Z",
-     "shell.execute_reply": "2021-11-10T10:37:53.760055Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:53.656465Z"
+     "iopub.execute_input": "2021-11-25T10:08:27.359160Z",
+     "iopub.status.busy": "2021-11-25T10:08:27.358720Z",
+     "iopub.status.idle": "2021-11-25T10:08:27.480994Z",
+     "shell.execute_reply": "2021-11-25T10:08:27.480250Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:27.359134Z"
     },
     "tags": []
    },
@@ -244,11 +241,11 @@
    "id": "efe1170d-9f3e-4a5a-ba9f-15869aeeff05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:53.762542Z",
-     "iopub.status.busy": "2021-11-10T10:37:53.761984Z",
-     "iopub.status.idle": "2021-11-10T10:37:53.784717Z",
-     "shell.execute_reply": "2021-11-10T10:37:53.783796Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:53.762516Z"
+     "iopub.execute_input": "2021-11-25T10:08:27.482492Z",
+     "iopub.status.busy": "2021-11-25T10:08:27.482130Z",
+     "iopub.status.idle": "2021-11-25T10:08:27.507031Z",
+     "shell.execute_reply": "2021-11-25T10:08:27.506093Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:27.482467Z"
     }
    },
    "outputs": [],
@@ -270,11 +267,11 @@
    "id": "3a8f4d82-d8cf-4166-a2ff-1f55974239ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:53.785993Z",
-     "iopub.status.busy": "2021-11-10T10:37:53.785852Z",
-     "iopub.status.idle": "2021-11-10T10:37:55.366305Z",
-     "shell.execute_reply": "2021-11-10T10:37:55.365428Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:53.785975Z"
+     "iopub.execute_input": "2021-11-25T10:08:27.508244Z",
+     "iopub.status.busy": "2021-11-25T10:08:27.507937Z",
+     "iopub.status.idle": "2021-11-25T10:08:29.812446Z",
+     "shell.execute_reply": "2021-11-25T10:08:29.811810Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:27.508225Z"
     },
     "tags": []
    },
@@ -325,18 +322,18 @@
    "id": "49b01ed0-7739-4d6e-a0e0-22d95286454e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:37:55.367417Z",
-     "iopub.status.busy": "2021-11-10T10:37:55.367288Z",
-     "iopub.status.idle": "2021-11-10T10:38:20.232259Z",
-     "shell.execute_reply": "2021-11-10T10:38:20.231406Z",
-     "shell.execute_reply.started": "2021-11-10T10:37:55.367399Z"
+     "iopub.execute_input": "2021-11-25T10:08:29.814032Z",
+     "iopub.status.busy": "2021-11-25T10:08:29.813570Z",
+     "iopub.status.idle": "2021-11-25T10:09:03.921063Z",
+     "shell.execute_reply": "2021-11-25T10:09:03.920474Z",
+     "shell.execute_reply.started": "2021-11-25T10:08:29.814006Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7d188ed968147dbbe8a0d36309c09d1",
+       "model_id": "a386186198b44f6480d086482820c230",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,11 +397,11 @@
    "id": "b913115e-7a8e-424d-a6cd-dfb1a643a240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:20.233646Z",
-     "iopub.status.busy": "2021-11-10T10:38:20.233484Z",
-     "iopub.status.idle": "2021-11-10T10:38:20.458338Z",
-     "shell.execute_reply": "2021-11-10T10:38:20.457576Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:20.233630Z"
+     "iopub.execute_input": "2021-11-25T10:09:03.922713Z",
+     "iopub.status.busy": "2021-11-25T10:09:03.922070Z",
+     "iopub.status.idle": "2021-11-25T10:09:04.214900Z",
+     "shell.execute_reply": "2021-11-25T10:09:04.214313Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:03.922690Z"
     },
     "tags": []
    },
@@ -447,11 +444,11 @@
    "id": "9e5b261b-05eb-49a3-8ae8-f923f1100acf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:20.459753Z",
-     "iopub.status.busy": "2021-11-10T10:38:20.459278Z",
-     "iopub.status.idle": "2021-11-10T10:38:20.474136Z",
-     "shell.execute_reply": "2021-11-10T10:38:20.473433Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:20.459727Z"
+     "iopub.execute_input": "2021-11-25T10:09:04.216265Z",
+     "iopub.status.busy": "2021-11-25T10:09:04.215875Z",
+     "iopub.status.idle": "2021-11-25T10:09:04.235438Z",
+     "shell.execute_reply": "2021-11-25T10:09:04.234925Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:04.216241Z"
     },
     "tags": []
    },
@@ -495,11 +492,11 @@
    "id": "7797e54a-c9d8-44f4-bedb-5858bf817826",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:20.475033Z",
-     "iopub.status.busy": "2021-11-10T10:38:20.474914Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.021340Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.020554Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:20.475018Z"
+     "iopub.execute_input": "2021-11-25T10:09:04.236493Z",
+     "iopub.status.busy": "2021-11-25T10:09:04.236254Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.219317Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.218713Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:04.236472Z"
     },
     "tags": []
    },
@@ -507,7 +504,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f7b1295a550>"
+       "<matplotlib.lines.Line2D at 0x7efe1957da90>"
       ]
      },
      "execution_count": 11,
@@ -548,11 +545,11 @@
    "id": "33d1e72e-3537-446a-8d92-2613a88d4b05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.023977Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.023380Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.209339Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.208547Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.023951Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.221896Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.221540Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.471248Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.470680Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.221874Z"
     },
     "tags": []
    },
@@ -810,11 +807,11 @@
    "id": "6d71b12f-52a9-4401-8530-53e25cc3a113",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.210403Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.210277Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.399229Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.398328Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.210387Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.472155Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.472031Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.721456Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.720863Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.472137Z"
     },
     "tags": []
    },
@@ -1712,11 +1709,11 @@
    "id": "81bb4144-64ae-4fa3-b43d-2742597f2956",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.400323Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.400199Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.414623Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.413956Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.400308Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.722784Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.722429Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.748100Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.747586Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.722760Z"
     },
     "tags": []
    },
@@ -1744,11 +1741,11 @@
    "id": "fb5700ab-c302-4005-8ff7-216d9d8ee923",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.415438Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.415327Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.508725Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.508140Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.415425Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.748974Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.748832Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.853498Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.852571Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.748955Z"
     },
     "tags": []
    },
@@ -1776,11 +1773,11 @@
    "id": "65aa3350-b6cd-43b9-a16f-fbd27660852d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.509708Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.509583Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.601658Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.600745Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.509695Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.855585Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.854999Z",
+     "iopub.status.idle": "2021-11-25T10:09:11.942289Z",
+     "shell.execute_reply": "2021-11-25T10:09:11.941660Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.855547Z"
     },
     "tags": []
    },
@@ -1809,11 +1806,11 @@
    "id": "f02bb79c-62b7-4660-8c6b-7f96133271b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.602840Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.602704Z",
-     "iopub.status.idle": "2021-11-10T10:38:26.899558Z",
-     "shell.execute_reply": "2021-11-10T10:38:26.898699Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.602824Z"
+     "iopub.execute_input": "2021-11-25T10:09:11.943436Z",
+     "iopub.status.busy": "2021-11-25T10:09:11.943198Z",
+     "iopub.status.idle": "2021-11-25T10:09:12.141640Z",
+     "shell.execute_reply": "2021-11-25T10:09:12.141073Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:11.943413Z"
     },
     "tags": []
    },
@@ -1904,11 +1901,11 @@
    "id": "f6547aaa-610b-47e6-b93c-d4002620b96b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-10T10:38:26.900585Z",
-     "iopub.status.busy": "2021-11-10T10:38:26.900451Z",
-     "iopub.status.idle": "2021-11-10T10:38:27.268535Z",
-     "shell.execute_reply": "2021-11-10T10:38:27.267657Z",
-     "shell.execute_reply.started": "2021-11-10T10:38:26.900569Z"
+     "iopub.execute_input": "2021-11-25T10:09:12.142774Z",
+     "iopub.status.busy": "2021-11-25T10:09:12.142517Z",
+     "iopub.status.idle": "2021-11-25T10:09:12.554670Z",
+     "shell.execute_reply": "2021-11-25T10:09:12.554171Z",
+     "shell.execute_reply.started": "2021-11-25T10:09:12.142751Z"
     },
     "tags": []
    },
