♻️ Removed unused code and refractor pandas

--- a/06-confusion-matrix.ipynb
+++ b/06-confusion-matrix.ipynb
@@ -22,12 +22,15 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "df1 = pd.read_pickle('models/confusion-matrix-baseline.pkl')\n",
-    "df2 = pd.read_pickle('models/confusion-matrix-random-forest.pkl')\n",
-    "df3 = pd.read_pickle('models/confusion-matrix-fair-random-forest.pkl')\n",
-    "df = pd.concat([df1, df2, df3])\n",
-    "df = df.replace({'True': {'Compliant': 'C', 'Non-compliant': 'NC'}, 'Predicted': {'Compliant': 'C', 'Non-compliant': 'NC'}})\n",
-    "df.rename(columns={'True': 'Ground truth'}, inplace=True)"
+    "df = (\n",
+    "    pd.concat([\n",
+    "        pd.read_pickle('models/confusion-matrix-baseline.pkl'), \n",
+    "        pd.read_pickle('models/confusion-matrix-random-forest.pkl'), \n",
+    "        pd.read_pickle('models/confusion-matrix-fair-random-forest.pkl')\n",
+    "    ])\n",
+    "    .replace({'True': {'Compliant': 'C', 'Non-compliant': 'NC'}, 'Predicted': {'Compliant': 'C', 'Non-compliant': 'NC'}})\n",
+    "    .rename(columns={'True': 'Ground truth'})\n",
+    ")"
    ]
   },
   {
@@ -66,8 +69,6 @@
     "with plt.rc_context({'font.size': 8}):\n",
     "    fig, axs = plt.subplots(len(models),len(flags), figsize=(4.82,5.25), gridspec_kw={'height_ratios': [3,2,2], 'right': .85})\n",
     "    cbar_ax = fig.add_axes([.85, .15, .05, .7])\n",
-    "\n",
-    "    heatmap_kws = {'cmap': 'viridis', 'fmt': '', 'square': True, 'linewidths': .5, 'cbar_kws': {'label': 'Fraction of ground truth', 'format': PercentFormatter()}, 'vmin': 0, 'vmax': 100}\n",
     "\n",
     "    for row_idx, row in enumerate(models):\n",
     "        for col_idx, col in enumerate(flags):\n",
